--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "node-xml2js-xpath",
+  "name": "xml2js-xpath",
   "version": "0.4.4",
   "description": "Search xml2js JSON documents with XPath query strings.",
-  "main": "index.js",
+  "main": "xpath.js",
   "scripts": {
-    "test": "mocha test"
+    "test": "./node_modules/.bin/mocha test"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/dsummersl/node-xml2js-xpath",
   "dependencies": {
-    "xml2js": "^0.4.4"
+    "lodash": "2.4.1",
+    "xml2js": "0.4.4"
   },
   "devDependencies": {
     "chai": "^1.9.2",
