--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.5.0",
   "description": "Search xml2js JSON documents with XPath query strings.",
   "main": "xpath.js",
+  "typings": "xml2js-xpath",
   "scripts": {
     "test": "./node_modules/.bin/mocha test"
   },
