--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "test": "./node_modules/.bin/mocha test"
   },
   "dependencies": {
-    "lodash": "3.10.1"
+    "lodash": "^4.15.0"
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
     "babel-preset-es2015": "^6.9.0",
-    "chai": "^1.9.2",
-    "mocha": "^2.0.1",
+    "chai": "^3.5.0",
+    "mocha": "^3.0.2",
     "xml2js": "^0.4.17"
   },
   "typings": "xml2js-xpath"
