--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
     "test": "babel-node node_modules/.bin/babel-istanbul cover node_modules/.bin/_mocha -- 'src/**/*.spec.js'"
   },
   "dependencies": {
-    "lodash": "4.17.2"
+    "lodash": "4.17.5"
   },
   "devDependencies": {
-    "babel-cli": "6.18.0",
-    "babel-core": "6.18.2",
-    "babel-istanbul": "0.11.0",
-    "babel-preset-es2015": "6.18.0",
-    "chai": "3.5.0",
-    "mocha": "3.2.0",
-    "xml2js": "0.4.17"
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-istanbul": "0.12.2",
+    "babel-preset-env": "^1.6.1",
+    "chai": "4.1.2",
+    "mocha": "5.0.1",
+    "xml2js": "0.4.19"
   },
   "typings": "xml2js-xpath"
 }
