--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+!src/*
+
+# transpiled/dist
+/xpath.js
+
+
 # Logs
 logs
 *.log
@@ -12,6 +18,7 @@ lib-cov
 
 # Coverage directory used by tools like istanbul
 coverage
+.nyc_output/
 
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
@@ -27,4 +34,3 @@ node_modules
 # Users Environment Variables
 .lock-wscript
 *.swp
-xpath.js
