--- a/package.json
+++ b/package.json
@@ -20,24 +20,24 @@
     "url": "https://github.com/dsummersl/node-xml2js-xpath.git"
   },
   "scripts": {
-    "prepublish": "./node_modules/.bin/babel src/xpath.js > xpath.js",
+    "prepublish": "babel src/xpath.js > xpath.js",
     "test": "nyc mocha src/**/*.test.js"
   },
   "dependencies": {
     "lodash": "^4.17.11"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.3",
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-transform-runtime": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/register": "^7.4.0",
-    "@babel/runtime": "^7.4.3",
-    "@istanbuljs/nyc-config-babel": "^2.1.0",
-    "babel-plugin-istanbul": "^5.1.3",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/register": "^7.4.4",
+    "@babel/runtime": "^7.4.4",
+    "@istanbuljs/nyc-config-babel": "^2.1.1",
+    "babel-plugin-istanbul": "^5.1.4",
     "chai": "^4.2.0",
     "mocha": "^6.1.4",
-    "nyc": "^14.0.0",
+    "nyc": "^14.1.0",
     "xml2js": "^0.4.19"
   },
   "typings": "xml2js-xpath",
